# -DevOps-Course-Starter

./: .dockerignore  .env.j2  .env.template  .env.test  .terraform.lock.hcl  Dockerfile  README.md  docker-compose.yml  main.tf  outputs.tf  pyproject.toml  pytest.ini  variables.tf
.github/workflows/: ci-pipline.yml
AnsibleFiles/: inventory  new_vault.yml  playbook.yml  todoapp.service
todo_app/: api_exception.py  app.py  database_exception.py  flask_config.py  view_model.py  wsgi.py
todo_app/data/: db_client.py  db_items.py  session_items.py  todo_item.py  trello_items.py
todo_app/templates/: index.html
todo_app/tests/: test_app.py  view_model_test.py
todo_app/user/: user.py
