[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.4"
python-dotenv = "^0.14.0"
requests = "^2.26.0"
pytest = "^6.2.5"
freezegun = "^1.1.0"
gunicorn = "^20.1.0"
pymongo = "^4.1.1"
mongomock = "^4.1.2"
pytest-env = "^0.6.2"
Flask-Login = "^0.6.2"
MarkupSafe = "2.0.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"